# chess-agentic-rag

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PROJECT_OVERVIEW.md
docs/milestones/: M0_SETUP.md  M1_DATA_PIPELINE.md
helpers/: setup_ollama.sh
scripts/: check_ollama.py  download_data.py  view_game.py
src/chess_agentic_rag/core/: __init__.py  config.py  exceptions.py  models.py
src/chess_agentic_rag/data/loaders/: __init__.py  base.py  lichess_loader.py  pgnmentor_loader.py  wikipedia_loader.py
src/chess_agentic_rag/llm/: ollama_client.py
tests/: conftest.py
tests/unit/: test_loaders.py  test_ollama_client_enhanced.py  test_ollama_connection.py
